--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <input type="checkbox" name="fun">
     <div class="container text-center box">
         <div class="row firstrow">
             <div class="col-lg-12 col0 text-right">
