--- a/calculator.html
+++ b/calculator.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/calculator.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <title>First Calculator UI</title>
+    <title>Calculator UI</title>
 </head>
 
 <body>
-    <input type="checkbox" name="fun">
     <div class="container text-center box">
         <div class="row firstrow">
             <div class="col-lg-12 col0 text-right">
